# metaagent

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  README.md  metaagent.code-workspace  metaagent.cpp  metaagent.h
app/: CMakeLists.txt  build_and_run.bat  build_and_run.sh
app/public/: app.js  index.html  style.css
app/src/: main.cpp  metaagent_host.cpp  metaagent_host.hpp  metaagent_http_mount.cpp  metaagent_http_mount.hpp  process_manager.cpp  process_manager.hpp
cmake/: FFmpeg.cmake
include/metaagent/: export.hpp  initialize.cpp  initialize.hpp  version.hpp
include/metaagent/app/: commands.cpp  commands.hpp  gui_actions.cpp  gui_actions.hpp  gui_catalog.cpp  gui_catalog.hpp
include/metaagent/camera/: controller.cpp  controller.hpp  rig.cpp  rig.hpp  types.cpp  types.hpp
include/metaagent/core/: log_sink.cpp  log_sink.hpp  math.cpp  math.hpp  types.cpp  types.hpp
include/metaagent/input/: policy.cpp  policy.hpp
include/metaagent/media/: decode.cpp  decode.hpp  image.hpp  mask_cache.cpp  mask_cache.hpp  pipeline.cpp  pipeline.hpp  store.cpp  store.hpp
include/metaagent/net/: handlers.cpp  handlers.hpp  json.cpp  json.hpp  platform_client.cpp  platform_client.hpp  router.cpp  router.hpp  types.hpp
include/metaagent/notify/: parse.cpp  parse.hpp  types.hpp
include/metaagent/particle/: actuation_math.cpp  actuation_math.hpp  effect_catalog.cpp  effect_catalog.hpp  forming_solver.cpp  forming_solver.hpp  forming_types.cpp  forming_types.hpp  image_mask_processor.cpp  image_mask_processor.hpp  pattern_types.cpp  pattern_types.hpp  representation_actuation.cpp  representation_actuation.hpp  representation_types.cpp  representation_types.hpp  return_types.cpp  return_types.hpp  scheduler.cpp  scheduler.hpp  shape_builder.cpp  shape_builder.hpp  shape_types.cpp  shape_types.hpp  state_effects.cpp  state_effects.hpp  transition_graph.cpp  transition_graph.hpp  visual_continuity.cpp  visual_continuity.hpp
include/metaagent/runtime/: host_interfaces.cpp  host_interfaces.hpp
include/metaagent/session/: status.cpp  status.hpp  types.hpp
src/app/: runtime_catalog.cpp  runtime_catalog.hpp
src/core/: base64.cpp  base64.hpp
src/media/: decode.cpp  probe.cpp  probe.hpp  tile_sequencer.cpp  tile_sequencer.hpp
src/net/: signal_router.cpp  signal_router.hpp  signal_types.cpp  signal_types.hpp
tests/: actuation_composer_test.cpp  app_command_test.cpp  camera_rig_test.cpp  effect_catalog_test.cpp  forming_types_test.cpp  gui_actions_test.cpp  gui_catalog_test.cpp  host_interfaces_test.cpp  media_decode_test.cpp  net_handler_test.cpp  platform_client_test.cpp  runtime_catalog_test.cpp  shape_builder_polyline_test.cpp  signal_router_test.cpp  state_effects_test.cpp  transition_graph_test.cpp  visual_continuity_test.cpp
tools/: metaagent_server.cpp  mini_http_server.cpp  mini_http_server.hpp  sync_http_client.cpp  sync_http_client.hpp
